--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog & Digital Clocks</title>
-    <link rel="stylesheet" href="assests/analog.css">
-    <link rel="stylesheet" href="assests/digital.css">
-    <link rel="stylesheet" href="assests/responsive.css">
-    <script src="assests/analog.js"></script>
-    <script src="assests/digital.js"></script>
+    <link rel="stylesheet" href="assets/analog.css">
+    <link rel="stylesheet" href="assets/digital.css">
+    <link rel="stylesheet" href="assets/responsive.css">
+    <script src="assets/analog.js"></script>
+    <script src="assets/digital.js"></script>
 </head>
 
 <body>
